sfdx-source/force-app/main/default/objects/WorkStepDependency__c/WorkStepDependency__c.object-meta.xml
<CustomObject>
    <description>LEM-1061: It stores dependencies between WorkSteps. It is used to control status updates of WorkSteps.</description>
    <label>Work Step Dependency</label>
    <nameField>
        <displayFormat>WSD-{0}</displayFormat>
        <label>Work Step Dependency Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Step Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>