sfdx-source/force-app/main/default/objects/WorkStepDependency__c/fields/Dependee_Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Dependee_Work_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1061: It indicates dependee Work Step. It drives status updates on dependent WorkSteps.</description>
    <inlineHelpText>Indicates dependee Work Step</inlineHelpText>
    <label>Work Step Name</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Dependent Work Steps</relationshipLabel>
    <relationshipName>DependentWorkSteps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>