sfdx-source/force-app/main/default/objects/WorkStepDependency__c/fields/Dependent_Work_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Work_Plan_Id__c</fullName>
    <description>LEM-3218: It indicates WorkPlanId of dependent Work Step used in querying Work Plan dependencies.</description>
    <formula>CASESAFEID(Dependent_Work_Step__r.WorkPlanId)</formula>
    <label>Work Plan Id</label>
    <type>Text</type>
</CustomField>