sfdx-source/force-app/main/default/objects/WorkStepDependency__c/fields/Dependent_Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Work_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1061: It indicates dependent Work Step. It is used for identifying WorkSteps whose status needs to be controlled.</description>
    <inlineHelpText>Indicates dependent Work Step</inlineHelpText>
    <label>Dependent Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Work Step Dependencies</relationshipLabel>
    <relationshipName>DependeeWorkStepDependencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>