sfdx-source/force-app/main/default/objects/WorkStepDependency__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>LEM-13112 : It is used for data migration</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>