sfdx-source/force-app/main/default/objects/WorkStepDependency__c/fields/Work_Step_Dependency_Template__c.field-meta.xml
<CustomField>
    <fullName>Work_Step_Dependency_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-1061: It indicates WorkStepDependencyTemplate record used for creation of WorkStepDependency record.</description>
    <label>Work Step Dependency Template</label>
    <referenceTo>WorkStepDependencyTemplate__c</referenceTo>
    <relationshipLabel>Work Step Dependencies</relationshipLabel>
    <relationshipName>Work_Step_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>