sfdx-source/force-app/main/default/objects/WorkStepDependency__c/fields/Work_Step_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Work_Step_Sequence__c</fullName>
    <description>LEM-1061: Execution Order of controlling WorkStep.</description>
    <formula>TEXT(Dependee_Work_Step__r.Work_Step_Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Step Sequence</label>
    <type>Text</type>
</CustomField>